--- a/Config.cfg
+++ b/Config.cfg
@@ -1,4 +1,4 @@
 const cfg = {
-    CLIENT_ID = 'svr2zgjkfdpoxhhum9ww8mssbz8sf1',
-    CLIENT_SECRET = '3zkn1f24n30dl5ur8lz0i4q0khr45j'
+    CLIENT_ID: 'svr2zgjkfdpoxhhum9ww8mssbz8sf1',
+    CLIENT_SECRET: '3zkn1f24n30dl5ur8lz0i4q0khr45j'
 }
