url param parser etc

--- a/Config.cfg
+++ b/Config.cfg
@@ -1,3 +1,5 @@
 const cfg = {
-    'CLIENT_ID': 'svr2zgjkfdpoxhhum9ww8mssbz8sf1'
+    'CLIENT_ID': 'svr2zgjkfdpoxhhum9ww8mssbz8sf1',
+    'ROOT_URL': 'https://msdfsf.github.io',
+    'SECRET_KEY': '1488'
 }
