--- a/Config.cfg
+++ b/Config.cfg
@@ -1,5 +1,6 @@
 const cfg = {
     'CLIENT_ID': 'svr2zgjkfdpoxhhum9ww8mssbz8sf1',
     'ROOT_URL': 'https://msdfsf.github.io',
-    'SECRET_KEY': '1488'
+    'SECRET_KEY': '1488',
+    'ANTI_FUN_ROOT_URL': 'https://antifun.club/'
 }
